--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,12 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
+# SQLite database files
+data/
+*.db
+*.sqlite
+*.sqlite3
+
 # dotenv environment variable files
 .env
 .env.*
