--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,7 @@ jobs:
 
       - name: Run API tests
         working-directory: scripts
-        run: ./run_api_tests.sh
-
+        run: ./test-api.sh
       # - name: docker login
       #   run: docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
 
