--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Start containers
+        run: docker compose up -d --build
+
+      - name: Wait for API to be ready
+        run: |
+          echo "Waiting for service to be ready..."
+          sleep 5
+
       - name: Make script executable
         working-directory: scripts
         run: chmod +x test-api.sh
